# fastapi-sqlmodel-demo-template

./: README.md  pyproject.toml  test_api.py
.devcontainer/: devcontainer.json
api/: app.py  db.py
fastapi_api/: app.py  db.py  models.py
